add security related middleware to express server

--- a/backend/expressjs/package.json
+++ b/backend/expressjs/package.json
@@ -24,6 +24,11 @@
     "@types/cookie-parser": "^1.4.8",
     "ajv": "^8.17.1",
     "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express-rate-limit": "^7.5.0",
+    "express-xss-sanitizer": "^2.0.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
+    "xss-clean": "^0.1.4"
   }
 }
