--- a/backend/expressjs/package.json
+++ b/backend/expressjs/package.json
@@ -25,6 +25,7 @@
     "ajv": "^8.17.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express-rate-limit": "^7.5.0",
     "express-xss-sanitizer": "^2.0.0",
     "helmet": "^8.1.0",
