--- a/backend/expressjs/package.json
+++ b/backend/expressjs/package.json
@@ -11,6 +11,7 @@
     "start": "npx tsx watch src/index.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
@@ -22,7 +23,9 @@
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.8",
+    "@types/mongoose": "^5.11.96",
     "ajv": "^8.17.1",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -30,6 +33,7 @@
     "express-xss-sanitizer": "^2.0.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "mongoose": "^8.15.0",
     "xss-clean": "^0.1.4"
   }
 }
