--- a/backend/expressjs/package.json
+++ b/backend/expressjs/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.3",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
@@ -33,6 +34,7 @@
     "express-xss-sanitizer": "^2.0.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "xss-clean": "^0.1.4"
   }
