--- a/backend/expressjs/package.json
+++ b/backend/expressjs/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/mongoose": "^5.11.96",
+    "@types/redis": "^4.0.10",
     "ajv": "^8.17.1",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -36,6 +37,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
+    "redis": "^5.1.0",
     "xss-clean": "^0.1.4"
   }
 }
