--- a/backend/expressjs/tsconfig.json
+++ b/backend/expressjs/tsconfig.json
@@ -9,6 +9,10 @@
      "esModuleInterop": true,
      "skipLibCheck": true,
      "forceConsistentCasingInFileNames": true,
+     "typeRoots": [
+       "./node_modules/@types",
+       "./src/types/global"
+     ],
      "paths": {
       "~/*": ["./src/*"]
     },
