--- a/backend/expressjs/tsconfig.json
+++ b/backend/expressjs/tsconfig.json
@@ -1,22 +1,33 @@
 {
-   "compilerOptions": {
-     "target": "es6",
-     "module": "CommonJS",
-     "allowSyntheticDefaultImports": true,
-     "moduleResolution": "node",
-     "outDir": "./dist",
-     "strict": true,
-     "esModuleInterop": true,
-     "skipLibCheck": true,
-     "forceConsistentCasingInFileNames": true,
-     "typeRoots": [
-       "./node_modules/@types",
-       "./src/types/global"
-     ],
-     "paths": {
-      "~/*": ["./src/*"]
-    },
-   },
-   "include": ["src/**/*.ts"],
-   "exclude": ["node_modules"]
- }
+  "compilerOptions": {
+    "target": "ES2021",
+    "module": "commonjs",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types",
+    ],
+    "paths": {
+      "~/*": [
+        "./src/*"
+      ]
+    }
+  },
+"include": [
+  "src",
+  "types"
+],
+"exclude": [
+    "node_modules",
+    "dist"
+  ]
+}
