--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,15 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "@types/js-cookie": "^3.0.6",
+    "cross-fetch": "^4.1.0",
+    "graphql": "^16.11.0",
     "isbot": "^5.1.27",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
