--- a/frontend/react-apollo/package.json
+++ b/frontend/react-apollo/package.json
@@ -15,8 +15,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
     "@tailwindcss/vite": "^4.1.7",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-icons": "^2.2.7",
     "graphql": "^16.11.0",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
