--- a/nextjs/next-poster/package.json
+++ b/nextjs/next-poster/package.json
@@ -6,9 +6,16 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.1.2",
+    "@mui/material-nextjs": "^7.1.1",
     "@typegoose/typegoose": "^12.17.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.10",
@@ -25,14 +32,26 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "4.0.1",
     "@eslint/eslintrc": "^3",
+    "@storybook/addon-a11y": "9.0.14",
+    "@storybook/addon-docs": "9.0.14",
+    "@storybook/addon-onboarding": "9.0.14",
+    "@storybook/addon-vitest": "9.0.14",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "eslint-plugin-storybook": "9.0.14",
+    "storybook": "9.0.14",
     "tailwindcss": "^4",
-    "typescript": "^5.8"
+    "typescript": "^5.8",
+    "@storybook/nextjs-vite": "^9.0.14",
+    "vitest": "^3.2.4",
+    "@vitest/browser": "^3.2.4",
+    "playwright": "^1.53.1",
+    "@vitest/coverage-v8": "^3.2.4"
   }
 }
